# superquadrics

./: CMakeLists.txt  README.md
executables/: CMakeLists.txt
tests/: CMakeLists.txt
